--- a/PS4-CHEME-5800-Student-SA-MinVarPortfolioAllocation-Fall-2025.ipynb
+++ b/PS4-CHEME-5800-Student-SA-MinVarPortfolioAllocation-Fall-2025.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "dd32d5c9",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "03a7d73a",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "c5b5b089",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "0bfcd00c",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "5ca4fe1c",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "b55800aa",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "d3030691",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "ef9ba667",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "b17facfe",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "4f68db79",
    "metadata": {},
    "outputs": [],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "260a7b00",
    "metadata": {},
    "outputs": [],
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "bfbde841",
    "metadata": {},
    "outputs": [],
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "f8aa87ad",
    "metadata": {},
    "outputs": [],
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "3fbbe7d4",
    "metadata": {},
    "outputs": [],
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "9109155f",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "2faff7af",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "8b262378",
    "metadata": {},
    "outputs": [],
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "c5c4ebf6",
    "metadata": {},
    "outputs": [],
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "23a8fbb8",
    "metadata": {},
    "outputs": [
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "e02c34b0",
    "metadata": {},
    "outputs": [
@@ -876,17 +876,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "0b2359f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put the analysis of your results here.\n"
+    "# When we remove the non-negativity barrier term from the SA objective and instead enforce non-negativity by projection \n",
+    "#(i.e., whenever a candidate step produces a negative component we set it to zero), the SA allocations typically \n",
+    "#become more “corner-like” and start to look closer to what a true constrained solver (like MadNLP) is willing to produce. \n",
+    "#The reason is that the log barrier heavily penalizes small positive weights, so the original SA formulation is biased toward \n",
+    "#spreading mass across assets and avoiding tiny positions; once that term is gone, SA is no longer “repelled” from near-zero weights, \n",
+    "#so it can concentrate into a smaller set of assets and allow many weights to sit exactly at (or extremely close to) zero after projection. \n",
+    "#In other words, with projection you enforce feasibility without warping the objective to dislike small allocations, \n",
+    "#so the weight vector becomes sparser and the per-asset differences between SA and MadNLP shrink.\n",
+    "\n",
+    "#In terms of results, you should usually see the modified SA either reduce its excess risk gap versus MadNLP or at \n",
+    "#least move in that direction, because you’ve removed an artificial regularizer that was pushing SA away from the \n",
+    "#true minimum-variance solution. However, the tradeoff is that the search can become more sensitive to hyperparameters: \n",
+    "#projection introduces a non-smooth “kink” (lots of candidates get clipped and then renormalized implicitly by the other penalties), \n",
+    "#so if the perturbation size/cooling isn’t well tuned you may see noisier convergence or occasional failure to satisfy the return/sum \n",
+    "#constraints as tightly as before. Overall, removing the barrier makes SA behave less like a “diversification-encouraging” \n",
+    "#heuristic and more like a direct feasibility-enforcing optimizer, so you generally get sparser portfolios and (often) lower \n",
+    "#variance for the same target return, closer to the deterministic MadNLP benchmark."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "d2d78148",
    "metadata": {},
    "outputs": [],
@@ -905,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "27c5eb3d",
    "metadata": {},
    "outputs": [
@@ -914,7 +930,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[0m\u001b[1mTest Summary:                                                            | \u001b[22m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal  \u001b[22m\u001b[39m\u001b[0m\u001b[1mTime\u001b[22m\n",
-      "CHEME 5800 PS4 Test Suite                                                | \u001b[32m  49  \u001b[39m\u001b[36m   49  \u001b[39m\u001b[0m0.9s\n",
+      "CHEME 5800 PS4 Test Suite                                                | \u001b[32m  49  \u001b[39m\u001b[36m   49  \u001b[39m\u001b[0m1.0s\n",
       "  Task 1: Compute the growth rate matrix                                 | \u001b[32m  10  \u001b[39m\u001b[36m   10  \u001b[39m\u001b[0m0.9s\n",
       "  Task 2: Solve the optimal allocation problem using Simulated Annealing | \u001b[32m  20  \u001b[39m\u001b[36m   20  \u001b[39m\u001b[0m0.1s\n",
       "  Task 3: Check results using another method                             | \u001b[32m  19  \u001b[39m\u001b[36m   19  \u001b[39m\u001b[0m0.0s\n"
