--- a/PS4-CHEME-5800-Student-SA-MinVarPortfolioAllocation-Fall-2025.ipynb
+++ b/PS4-CHEME-5800-Student-SA-MinVarPortfolioAllocation-Fall-2025.ipynb
@@ -875,29 +875,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "0b2359f8",
+   "cell_type": "markdown",
+   "id": "a836d82f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# When we remove the non-negativity barrier term from the SA objective and instead enforce non-negativity by projection \n",
-    "#(i.e., whenever a candidate step produces a negative component we set it to zero), the SA allocations typically \n",
-    "#become more “corner-like” and start to look closer to what a true constrained solver (like MadNLP) is willing to produce. \n",
-    "#The reason is that the log barrier heavily penalizes small positive weights, so the original SA formulation is biased toward \n",
-    "#spreading mass across assets and avoiding tiny positions; once that term is gone, SA is no longer “repelled” from near-zero weights, \n",
-    "#so it can concentrate into a smaller set of assets and allow many weights to sit exactly at (or extremely close to) zero after projection. \n",
-    "#In other words, with projection you enforce feasibility without warping the objective to dislike small allocations, \n",
-    "#so the weight vector becomes sparser and the per-asset differences between SA and MadNLP shrink.\n",
+    "Answer: When the non-negativity barrier term is removed from the simulated annealing objective and non-negativity is instead enforced directly by projecting negative weights to zero, the resulting portfolio allocations change noticeably. In particular, the simulated annealing solution begins to resemble the MadNLP solution more closely in structure, allowing small or near-zero allocations to appear rather than aggressively pushing weights away from zero. This happens because the logarithmic barrier term strongly penalizes small weights, effectively encouraging more evenly spread allocations, whereas direct projection only enforces feasibility without distorting the objective landscape. As a result, the simulated annealing optimizer is no longer biased against sparse or corner solutions and can explore portfolios with more concentrated positions.\n",
     "\n",
-    "#In terms of results, you should usually see the modified SA either reduce its excess risk gap versus MadNLP or at \n",
-    "#least move in that direction, because you’ve removed an artificial regularizer that was pushing SA away from the \n",
-    "#true minimum-variance solution. However, the tradeoff is that the search can become more sensitive to hyperparameters: \n",
-    "#projection introduces a non-smooth “kink” (lots of candidates get clipped and then renormalized implicitly by the other penalties), \n",
-    "#so if the perturbation size/cooling isn’t well tuned you may see noisier convergence or occasional failure to satisfy the return/sum \n",
-    "#constraints as tightly as before. Overall, removing the barrier makes SA behave less like a “diversification-encouraging” \n",
-    "#heuristic and more like a direct feasibility-enforcing optimizer, so you generally get sparser portfolios and (often) lower \n",
-    "#variance for the same target return, closer to the deterministic MadNLP benchmark."
+    "From a performance perspective, removing the barrier term typically improves the quality of the simulated annealing solution, reducing excess risk relative to the MadNLP benchmark while still satisfying the return and budget constraints. The remaining penalty terms for the target return and sum-to-one constraint are sufficient to guide convergence, but the optimization becomes less smooth and more sensitive to hyperparameters such as the perturbation size and cooling schedule. Overall, this modification highlights that the original barrier term was acting more as a regularizer than a strict constraint mechanism, and that enforcing feasibility directly allows simulated annealing to better approximate the true minimum-variance portfolio obtained via deterministic nonlinear programming."
    ]
   },
   {
